解决后台登录页面的路径问题

--- a/src/main/resources/templates/admin/upbook.html
+++ b/src/main/resources/templates/admin/upbook.html
@@ -151,7 +151,7 @@
                  console.log(result);
                  alert("添加成功！");
                  location.reload(true);
-                 window.top.location.href="/laofuzi/book/admin";
+                 window.top.location.href="/laofuzi/admin/index";
              }
          })
      });
