--- a/src/main/resources/static/css/style1.css
+++ b/src/main/resources/static/css/style1.css
@@ -2076,6 +2076,22 @@ table.choice {
     margin: 0 auto;
 }
 
+.address,.amount{
+    border-collapse: collapse;
+    border: 1px solid #cccccc;
+    width: 50%;
+    margin: 0 auto;
+    padding: 10px 20px;
+    font-size: 16px;
+    font-weight: bold;
+}
+
+.amount{
+    width: 100%;
+    height: 80px;
+    float: right;
+}
+
 table.choice tr {
     vertical-align: top;
 }
