--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -289,7 +289,7 @@
                         $("#books").empty("");
                         str= '';
                         for (i = 0; i < result.length; i++) {
-                            str += '<tr class="row' + i + '"><td><img  id="bookimg' + i + '" alt="书籍封面" src=""/> </td>';
+                            str += '<tr class="row' + i + '"><td><img  id="bookimg' + i + '"  src="' + result[i].img+ '" width=100px; /> </td>';
                             str += '<td><input type="text"  id="bookname' + i + '"value="' + result[i].name+ '" style="width:140px" readonly="true"/> </td>';
                             str += '<td><input type="text"  id="author' + i + '" value="' + result[i].author+ '" style="width:140px" readonly="true"/> </td>';
                             str += '<td><textarea id="description"  style="width:300px;height:150px;" readonly="true">'+result[i].describe+'</textarea></td> ';
